.happypack/s--1487164333
SyntaxError: Unexpected token, expected , (101:17)

[0m [90m  99 | [39m[36mconst[39m classes [33m=[39m [33mStyleSheet[39m[33m.[39mcreate({
 [90m 100 | [39m  img[33m:[39m {
[31m[1m>[22m[39m[90m 101 | [39m    width[33m:[39m [32m'100%'[39m[33m;[39m
 [90m     | [39m                 [31m[1m^[22m[39m
 [90m 102 | [39m  }[33m,[39m
 [90m 103 | [39m
 [90m 104 | [39m  gallery[33m:[39m {[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (101:17)

[0m [90m  99 | [39m[36mconst[39m classes [33m=[39m [33mStyleSheet[39m[33m.[39mcreate({
 [90m 100 | [39m  img[33m:[39m {
[31m[1m>[22m[39m[90m 101 | [39m    width[33m:[39m [32m'100%'[39m[33m;[39m
 [90m     | [39m                 [31m[1m^[22m[39m
 [90m 102 | [39m  }[33m,[39m
 [90m 103 | [39m
 [90m 104 | [39m  gallery[33m:[39m {[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)